--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Feliz Cumpleaños!!!!!</title>
+		<title>4 mesesitos tiamumuito</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Feliz Cumpleaños susi!!!!!</a></h1>
+						<h1><a href="index.html">Feliz Cumpleaños Mafiwi mi niña ♥</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -47,8 +47,8 @@
 						<div class="inner">
 							<h2>Felíz Cumpleaños!!!!!</h2>
 							<p>Hoy es un día muy especial<br />
-							Porque nació la niña de mis ojos<br />
-							E hice éste sitio para decirte porqué éste año fue especial!</p>
+							Porque nació mi niña favorita de todo el universo<br />
+							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button special scrolly">Inicio</a></li>
 							</ul>
@@ -61,9 +61,9 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Ha sido un año largo ...<br />
-									Han habido muchos aprendizajes, felicidades e historias que contar.</h2>
-								<p>Ha crecido el compromiso en la relación, comprensión y mucho amor! <br />
-									Y hoy, fué el día qué naciste así que hay que celebrarlo! </p>
+									Hemos aprendido muchas cosas juntos, cosas buenas otras no tan buenas xd</h2>
+								<p>Pero nos hemos entendido y salimos adelante juntos! <br />
+									Y hoy, nació mi chica favorita y te mostraré cuanto te amo </p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-birthday-cake major style1"><span class="label">Lorem</span></span></li>
@@ -77,8 +77,8 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="fotos/20150520_003617000_iOS.jpg" alt="" /></div><div class="content">
-								<h2>He encontrado en ti ...<br />
-								El amor!</h2>
+								<h2>Me enseñaste lo que es...<br />
+								Amar con todo el corazón!! ♥</h2>
 								<ul class="icons major">
 									<li><span class="icon fa-heartbeat major style2"><span class="label">Ipsum</span></span></li>
 								</ul>
@@ -88,12 +88,12 @@
 						</section>
 						<section id="tree" class="spotlight">
 							<div class="image"><img src="fotos/Collage_Felicidad.png" alt="" /></div><div class="content">
-								<h2>He encontrado en ti ...<br />
+								<h2>He encontrado en ti...<br />
 								La felicidad</h2>
 								<ul class="icons major">
 									<li><span class="icon fa-smile-o major style2"><span class="label">Ipsum</span></span></li>
 								</ul>
-								<p>Verte sonreir es de las cosas más gratificantes que encuentro y hacerte feliz es la meta de todos mis días. Pensarte todos los días me hace extrañarte pero es algo que nunca dejaré de hacer.</p>
+								<p>Hacerte feliz es lo que más me gusta hacer en la vida y es la meta de todos mis días. Pensarte me hace extrañarte pero es algo que nunca dejaré de hacer.</p>
 								<blockquote>"No hay medicina que cure lo que no cura la felicidad.".</blockquote>
 								<p>Gabriel García Márquez </p>
 						</div>
@@ -101,11 +101,11 @@
 						<section id="four" class="spotlight">
 							<div class="image"><img src="fotos/Collage_Zoo.png" alt="" /></div><div class="content">
 								<h2>Pasar tiempo contigo es ...<br />
-								Reconfortante</h2>
+								Especial</h2>
 								<ul class="icons major">
 									<li><span class="icon fa-headphones major style2"><span class="label">Ipsum</span></span></li>
 								</ul>
-								<p>Cada momento contigo es divertido, interesante o retador. Hablar contigo es muy relajante y saber tu punto de vista siempre es muy importante.</p>
+								<p>Cada momento contigo es divertido, y pronto estaremos juntos. Hablar contigo es muy relajante y me ayuda a sobrellevar un mal momento.</p>
 								<blockquote>"La amistad es un amor que no se comunica por los sentidos"</blockquote>
 								<p>Ramón de Campoamor</p>
 							</div>
@@ -113,11 +113,11 @@
 						<section id="five" class="spotlight">
 							<div class="image"><img src="fotos/Collage_salidas.png" alt="" /></div><div class="content">
 							<h2>He encontrado en ti ...<br />
-								Grandes Momentos</h2>
+								Mi alma gemela</h2>
 							<ul class="icons major">
 								<li><span class="icon fa-search major style2"><span class="label">Ipsum</span></span></li>
 							</ul>
-							<p>Solamente salir contigo es encontrar un mundo lleno de cosas nuevas, siempre tu nivel de detalle de ver las cosas me da fascinación y me me hace ver que tu amas las pequeñas cosas de la vida, como yo :3 </p>
+							<p>Solamente hablar contigo o hacer cualquier cosa juntos me causa mucha felicidad, tenemos una conexión genuina a la que no quiero reununciar jamás y siempre voy a querer pasar cada segundo de mi vida contigo mi niña </p>
 							<blockquote>"Soy feliz así con estas pequeñas cosas que me unen a tí, como cada pétalo a su rosa"</blockquote>
 							<p>Porta </p>
 						</div>
@@ -125,12 +125,11 @@
 						<section id="six" class="spotlight">
 							<div class="image"><img src="fotos/Collage_Selfie.png" alt="" /></div><div class="content">
 							<h2>He encontrado en ti ...<br />
-								Sueños</h2>
+								Mi compañera de vida</h2>
 							<ul class="icons major">
 								<li><span class="icon fa-map-marker major style2"><span class="label">Ipsum</span></span></li>
 							</ul>
-							<p>Porque se que tienes planes y metas, sueños que todos los días quieres cumplir y quiero estar allí para poder ayudarte a hacerlos realidad.</p>
-							<p>Saber que cuentas conmigo es una responsabilidad gigante y espero cumplir muy bien mi papel! Te amo!</p>
+							<p>Porque sé que tienes planes y metas, sueños que todos los días quieres cumplir y quiero estar allí para ser el primero en abrazarte y decirte que todo por lo que pasamos valió la pena</p>
 							<blockquote>"Fe es dar el primer paso, incluso cuando no ves toda la escalera"</blockquote>
 							<p>Martin Luther King</p>
 						</div>
@@ -142,10 +141,9 @@
 							<ul class="icons major">
 								<li><span class="icon fa-birthday-cake major style2"><span class="label">Ipsum</span></span></li>
 							</ul>
-							<p>Gracias por dejarme compartir este tiempo contigo, te amo!</p>
+							<p>Gracias por aguantarme y elegirme como tu pareja, te amo!</p>
 							<div class="video">
-								<iframe src="https://www.youtube.com/embed/1onlpSbzqVQ"
-										allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/Ar48yzjn1PE?si=xjkA4apgoM3VJIdb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 							</div>
 
 						</div>
@@ -175,11 +173,6 @@
 							<li><a href="#" class="icon fa-heart"><span class="label">·</span></a></li>
 							<li><a href="#" class="icon fa-heart"><span class="label">·</span></a></li>
 							<li><a href="#" class="icon fa-heart"><span class="label">·</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Ramiro Andrés Bedoya</li>
-							<li><a href="http://github.com/Whistler092" class="icon fa-github"><span class="label">Email</span></a></li>
-
 						</ul>
 					</footer>
 
