--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 											<li><a href="index.html">Inicio</a></li>
 											<li><a href="#two">El amor</a></li>
 											<li><a href="#tree">La Felicidad</a></li>
-											<li><a href="#four">Reconfortante</a></li>
-											<li><a href="#five">Grandes Momentos</a></li>
-											<li><a href="#six">Sueños</a></li>
+											<li><a href="#four">Especial</a></li>
+											<li><a href="#five">Mi alma gemela</a></li>
+											<li><a href="#six">Mi compañera de vida</a></li>
 											<li><a href="#seven">Feliz Cumpleaños</a></li>
 										</ul>
 									</div>
